--- a/configuration_files/_includes/footer.html
+++ b/configuration_files/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer id="footer">
-    <p >Built with mindoc.</br>
+    <p >Built with ScholarMinPub.</br>
     <!-- <a class="info" href="mailto:hege@example.com">project@mailbox.com</a></p> -->
 </footer>
